# actions

./: .gitignore  .pre-commit-config.yaml  Justfile  NOTICE  README.md  pyproject.toml  skaffold.yaml
.github/workflows/: .nfs.2005217a.57f7  .nfs.200522a3.7e8c  .nfs.20052360.82f0  .nfs.200523ee.065b  .nfs.2005245f.166d  .nfs.200524d1.50ea  acceptance-cycle.yml  ci.yml  pipeline.yml  release.yml  test-new-actions.yml
build-ephemeral/: action.yml
build-self-homing/: README.md  action.yml
bump-version/: Dockerfile  README.md  action.yml  bump_version.py
collect-rust-binaries/: README.md  action.yml  collect.sh  upload-each.mjs
collect-rust-binaries/upload-each/: action.yml  index.js  package-lock.json  package.json
common/: README.md  pyproject.toml
common/common/: __init__.py  notes.py
deliverable-binary/: action.yml
deliverable-lib/: .nfs.200521a0.5867  action.yml
detect-contexts/: .nfs.20052179.57f7  .nfs.2005222f.7608  .nfs.20052231.7608  .nfs.20052284.7d39  action.yml  detect.py
docker-to-ttl-sh/: action.yml
docs/: .nfs.200523f0.065b  ECOSYSTEM-AND-DEPENDENCIES.md  INTEGRATION-BUILD-OCTOPILOT.md  ZERO-CONFIG-DESIGN.md  pipeline.md
hack/: discover_actions.py
helm-to-ttl-sh/: action.yml
integration-build-artifact/: .nfs.200524d3.50ea  .nfs.200524d7.50ea  README.md  action.yml
integration-validate/: action.yml
is-tag/: Dockerfile  README.md  action.yml  entrypoint.sh
janitor/: action.yml
kotlin-lint/: README.md  action.yml
kubernetes-auth/: Dockerfile  README.md  action.yml  auth_kubernetes.py
kubernetes-auth/tests/: test_auth_kubernetes.py
lint/: action.yml
merge-build-results/: README.md  action.yml
network-access/aks-allow-runner/: README.md  action.yml  aks_updater.py
network-access/eks-allow-runner/: README.md  action.yml  eks_updater.py
network-access/gke-allow-runner/: README.md  action.yml  gke_updater.py
octopilot/: .nfs.2005229e.7e8c  .nfs.200522a0.7e8c  .nfs.200522a1.7e8c  .nfs.20052421.50ea  .nfs.200524b0.2c6a  .nfs.200524ba.2ec5  .nfs.200524d5.50ea  .nfs.200524d8.50ea  README.md  action.yml
paketo-to-ttl-sh/: action.yml
previous-tag/: README.md  action.yml  entrypoint.sh
read-properties/: Dockerfile  action.yml  read_properties.py
release/: Dockerfile  README.md  action.yml  main.py
rotate-secret/: Dockerfile  README.md  action.yml  rotate_secret.py
rotate-secret/tests/: test_rotate_secret.py
setup-flux/: README.md  action.yml
setup-tools/: README.md  action.yml  install_tools.py
setup-tools/tests/: test_install_tools.py
sops-decrypt/: Dockerfile  README.md  action.yml  sops_decrypt.py
sops-decrypt/tests/: test_sops_decrypt.py
test/: action.yml
tests/: __init__.py  conftest.py
tests/integration/: test_bump_integration.py
verify-registry/: README.md  action.yml
(+12 files in other folders)
