[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "octopilot-actions"
version = "0.1.11"
description = "Project-agnostic GitHub Actions for Octopilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.15.0",
    "octopilot-actions-common",
    "PyYAML",
    "pyre-check",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".git", "__pycache__", ".venv", "*.egg-info", ".pytest_cache"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
]
ignore = [
    "S101",   # assert_used (allow in tests)
    "S104",   # bind to all interfaces
    "S311",   # random for crypto (allow random in tests)
    "S603",   # subprocess without shell=True (CLI/tooling runs fixed commands)
    "S607",   # partial executable path (intentional for system binaries)
]

[tool.ruff.lint.per-file-ignores]
# Action entrypoints use print(stderr) for GitHub Actions output
"*/main.py" = ["T201"]
"*/sops_decrypt.py" = ["T201"]
"*/install_tools.py" = ["T201", "S310"]
"*/rotate_secret.py" = ["T201"]
"*/auth_kubernetes.py" = ["T201"]
"*/gke_updater.py" = ["T201"]
"*/eks_updater.py" = ["T201"]
"*/aks_updater.py" = ["T201"]
"*/read_properties.py" = ["T201"]
"bump-version/bump_version.py" = ["T201"]
"common/**/notes.py" = ["S310"]
"hack/**" = ["T201"]
# Tests: nested with for patch stacking is readable
# Tests: nested with for patch stacking is readable, allow asserts and other security laxity in tests
"**/tests/**" = ["SIM117", "S101", "S105", "S106", "S108"]

[tool.ruff.lint.isort]
known-first-party = ["common"]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["common"]
addopts = "-v --tb=short"
filterwarnings = ["ignore:.*"]
