[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octopilot-actions-common"
version = "0.1.0"
description = "Shared Python code for octopilot-actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]
